# cpp-template-linux

./: .clang-format  .gitignore  CMakeLists.txt  COPYING  README.md  clean.sh  compile.sh  env.sh
include/hello/: hello.hpp
src/: cpp-sample.cpp  hello.cpp
